# jsonrpc-gateway

./: Cargo.toml  Dockerfile  README.md  run.sh
jsonrpc-app/: Cargo.toml
jsonrpc-app/src/: args.rs  main.rs
jsonrpc-gw/: Cargo.toml
jsonrpc-gw/src/: api.rs  args.rs  main.rs  telemetry.rs
jsonrpc-key/: Cargo.toml
jsonrpc-key/src/: args.rs  main.rs
jsonrpc-proto/: Cargo.toml
jsonrpc-proto/src/: formatter.rs  lib.rs  redis.rs
