[package]
name = "jsonrpc-gw"
version = "0.2.0"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = { version = "1" }
thiserror = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = "0.15"
structopt = { version = "0.3", default-features = false }
redis = { version = "0.21", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
