[package]
name = "jsonrpc-key"
version = "0.2.0"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = { version = "1" }
dotenv = "0.15"
thiserror = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = { version = "0.3", default-features = false }
redis = { version = "0.21", features = ["async-std-comp"] }
async-std = { version = "1.8.0", features = ["attributes"] }
jsonrpc-proto = { path = "../jsonrpc-proto" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
