[package]
name = "jsonrpc-key"
version = "0.2.0"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = { version = "1" }
async-std = { version = "1.8.0", features = ["attributes"] }
clap = { version = "2.33", default-features = false }
dotenv = "0.15"
jsonrpc-proto = { path = "../jsonrpc-proto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = { version = "0.3", default-features = false }
thiserror = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
