[package]
name = "jsonrpc-proto"
version = "0.2.0"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"

[dependencies]
thiserror = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = "0.15"
structopt = { version = "0.3", default-features = false }