[package]
name = "jsonrpc-proto"
version = "0.2.0"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = { version = "1" }
clap = { version = "2.33", default-features = false }
redis = { version = "0.21", features = ["async-std-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8" }
slug = "0.1"
structopt = { version = "0.3", default-features = false }
thiserror = { version = "1" }